Preventing the screen from jumping when the helpful text changes.

--- a/interactions/interactions.css
+++ b/interactions/interactions.css
@@ -4,7 +4,7 @@ body {
 }
 
 h2 {
-    text-align: left; padding-top: 20px; font-size:36px; color: rgba(89,140,225,100);
+    text-align: left; padding-top: 20px; font-size:36px; color: rgba(89,140,225,100); height: 100px;
 }
 
 .table th {
